refactor auth remove blacklist
